# glass1

./: README.md  engine_design.drawio  main.py  pyproject.toml  requirements.txt
glass_dag/: __init__.py  dag_model.py  dash_spreadsheet.py
glass_dag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
glass_engine/: constants.py  data_provider.py  functions.py  live_evaluator.py  reactive.py  syntax.lark  transformers.py
tests/: test_glass_dag.py
