[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glass-dag"
version = "0.1.0"
description = "A timeseries expression engine with technical indicators"
authors = [
    { name="Nicolas", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "lark",
    "numba"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["glass_engine*", "glass_dag*"]
